--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.23.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "expo-font": "~11.1.1",
-    "expo-splash-screen": "~0.18.2"
+    "expo-image-picker": "~14.1.1",
+    "expo-document-picker": "~11.2.2",
+    "expo-av": "~13.2.1",
+    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
